--- a/en/AboutRin/stylesheet.css
+++ b/en/AboutRin/stylesheet.css
@@ -105,7 +105,7 @@ footer{
     color: #000000;
     text-decoration: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 750;
+    font-weight: bold;
 }
 
 .Nav{
