--- a/en/Current/stylesheet.css
+++ b/en/Current/stylesheet.css
@@ -10,6 +10,8 @@
 .col-2 {width: 40%;}
 .col-3 {width: 30%;}
 .col-4 {width: 100%;}
+.col-5 {width: 50%;}
+.col-6 {width: 100%;}
 .col-10 {width: 33.33%;}
 .col-11 {width: 33.33%;}
 .col-12 {width: 33.33%;}
@@ -24,6 +26,11 @@
     display: table;
 }
 
+.row-2::after{
+    content: "";
+    clear: both;
+    display: table;
+}
 .row-3{
     padding: 5px 0 5px 0;
 }
@@ -70,6 +77,11 @@
     display: block;
     margin: 0 auto;
     max-width: 416px;
+    height: auto;
+}
+
+#IMG_Current_Rin{
+    max-width: 1000px;
     height: auto;
 }
 
