--- a/en/Music/stylesheet.css
+++ b/en/Music/stylesheet.css
@@ -10,12 +10,30 @@
 .col-2 {width: 40%;}
 .col-3 {width: 30%;}
 .col-4 {width: 100%;}
-.col-10 {width: 33.33%;}
-.col-11 {width: 33.33%;}
-.col-12 {width: 33.33%;}
+.col-5 {width: 25%;}
+.col-6 {width: 75%;}
+.col-7 {width: 25%;}
+.col-8 {width: 75%;}
+.col-9 {width: 25%;}
+.col-10 {width: 75%;}
+.col-11 {width: 25%;}
+.col-12 {width: 75%;}
+.col-13 {width: 25%;}
+.col-14 {width: 75%;}
+.col-15 {width: 100%;}
+.col-16 {width: 100%;}
+.col-17 {width: 100%;}
+.col-18 {width: 25%;}
+.col-19 {width: 25%;}
+.col-20 {width: 25%;}
+.col-21 {width: 25%;}
+.col-22 {width: 33.33%;}
+.col-23 {width: 33.33%;}
+.col-24 {width: 33.33%;}
 
 [class*="col-"]{
     float: left;
+    /* border: red solid 1px; */
 }
 
 .row-1::after{
@@ -24,10 +42,22 @@
     display: table;
 }
 
-.row-3{
+.row-2::after{
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.row-3::after{
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.row-4{
     padding: 5px 0 5px 0;
 }
-.row-3::after{
+.row-4::after{
     content: "";
     clear: both;
     display: table;
@@ -48,8 +78,42 @@
     padding-bottom: 40px;
 }
 
+.col-5,
+.col-9,
+.col-13{
+    float: right;
+}
+
+.col-6,
 .col-10,
-.col-11{
+.col14{
+    float: left;
+}
+
+.col-6,
+.col-8,
+.col-10,
+.col-12,
+.col-14{
+    height: 468px;
+    padding: 40px;
+}
+
+.col-16,
+.col-17{
+    padding: 40px 0 40px 40px;
+}
+
+.col-18,
+.col-19,
+.col-20,
+.col-21{
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.col-22,
+.col-23{
     text-align: center;
 }
 
@@ -71,6 +135,24 @@
     margin: 0 auto;
     max-width: 416px;
     height: auto;
+}
+
+#IMG_Music_KSDeluxe,
+#IMG_Music_KS,
+#IMG_Music_Nimmerland,
+#IMG_Music_PlanetM,
+#IMG_Music_EROS{
+    width: 100%;
+    height: auto;
+}
+
+#IMG_Music_Spotify,
+#IMG_Music_AppleM,
+#IMG_Music_SoundC,
+#IMG_Music_Deezer{
+    height: 80px;
+    width: auto;
+    vertical-align: middle;
 }
 
 #Music{
@@ -116,6 +198,13 @@ footer{
     font-size: 30px;
 }
 
+.a_Music:active,
+.a_Music:link,
+.a_Music:visited,
+.a_Music:hover{
+    color: white;
+}
+
 @media only screen and (max-width: 1500px) {
     #Ljubav {
         padding-right: 30px;
@@ -153,14 +242,14 @@ footer{
 }
 
 @media only screen and (max-width: 768px) {
-    .col-11{position: absolute;
+    .col-23{position: absolute;
             left: 50%;
             transform: translate(-50%);
             width: 60%;
             margin-top: 30px;
     }
-    .col-10,
-    .col-12{width: 50%;
+    .col-22,
+    .col-24{width: 50%;
         padding-bottom: 25px;
             background-color: #828B8D;}
 }
@@ -178,11 +267,11 @@ footer{
     .col-4{
         padding-top: 10px;
     }
-    .col-10,
-    .col-12{
+    .col-22,
+    .col-24{
         padding-bottom: 40px;
     }
-    .col-11{
+    .col-23{
         margin-top: 40px;
     }
     .Nav{
