--- a/en/Music/stylesheet.css
+++ b/en/Music/stylesheet.css
@@ -90,13 +90,21 @@
     float: left;
 }
 
+.col-5,
+.col-7,
+.col-9,
+.col-11,
+.col-13{
+    height: 468px;
+}
+
 .col-6,
 .col-8,
 .col-10,
 .col-12,
 .col-14{
     height: 468px;
-    padding: 40px;
+    padding: 0 40px 40px 40px;
 }
 
 .col-16,
@@ -182,6 +190,14 @@ footer{
     background-color: #828B8D;
 }
 
+article{
+    background-color: #181A1B;
+    font-size: 45px;
+    font-weight: bold;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .Nav,
 .Footer{
     color: #000000;
@@ -212,6 +228,10 @@ footer{
     #Music{
         padding-left: 30px;
     }
+    .col-18 {width: 50%;}
+    .col-19 {width: 50%;}
+    .col-20 {width: 50%;}
+    .col-21 {width: 50%;}
 }
 
 @media only screen and (max-width: 1045px) {
@@ -239,6 +259,57 @@ footer{
     .col-2 {width: 100%;}
     .col-3 {width: 50%;}
     .col-4 {width: 100%;}
+    .col-5,
+    .col-6,
+    .col-7,
+    .col-8,
+    .col-9,
+    .col-10,
+    .col-11,
+    .col-12,
+    .col-13,
+    .col-14{
+        height: 300px;
+    }
+    article{
+        font-size: 35px;
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    .col-5,
+    .col-6,
+    .col-7,
+    .col-8,
+    .col-9,
+    .col-10,
+    .col-11,
+    .col-12,
+    .col-13,
+    .col-14{
+        height: 250px;
+    }
+    article{
+        font-size: 30px;
+    }
+    #IMG_Music_Spotify,
+    #IMG_Music_AppleM,
+    #IMG_Music_SoundC,
+    #IMG_Music_Deezer{
+        height: 60px;
+        width: auto;
+    }
+    .col-6,
+    .col-8,
+    .col-10,
+    .col-12,
+    .col-14{
+        padding: 0 30px 30px 30px;
+    }
+    .col-16,
+    .col-17{
+        padding: 30px 0 30px 30px;
+    }
 }
 
 @media only screen and (max-width: 768px) {
@@ -252,6 +323,21 @@ footer{
     .col-24{width: 50%;
         padding-bottom: 25px;
             background-color: #828B8D;}
+    article{
+        font-size: 25px;
+    }
+    .col-6,
+    .col-8,
+    .col-10,
+    .col-12,
+    .col-14{
+        padding: 0 20px 20px 20px;
+    }
+    .col-16,
+    .col-17{
+        padding: 20px 0 20px 20px;
+    }
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -304,13 +390,16 @@ footer{
     }
     #DeFlag{
         padding: 2px;
-    }   
+    }
+    article{
+        font-size: 20px;
+    }
+    #IMG_Music_Spotify,
+    #IMG_Music_AppleM,
+    #IMG_Music_SoundC,
+    #IMG_Music_Deezer{
+        height: 40px;
+        width: auto;
+    }
 }
 
-article{
-    background-color: #181A1B;
-    font-size: 45px;
-    font-weight: bold;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
