--- a/en/Ljubav/stylesheet.css
+++ b/en/Ljubav/stylesheet.css
@@ -10,16 +10,16 @@
 .col-2 {width: 40%;}
 .col-3 {width: 30%;}
 .col-4 {width: 100%;}
-.col-5 {width: 40%;}
-.col-6 {width: 60%;}
+.col-5 {width: 100%;}
+.col-6 {width: 50%;}
 .col-7 {width: 50%;}
-.col-8 {width: 50%;}
 .col-10 {width: 33.33%;}
 .col-11 {width: 33.33%;}
 .col-12 {width: 33.33%;}
 
 [class*="col-"]{
     float: left;
+    /* border: red solid 1px; */
 }
 
 .row-1::after{
@@ -59,11 +59,12 @@
 }
 
 .col-5{
-    padding: 30px 0 0 40px;
+    padding: 30px 40px 0 40px;
+    text-align: justify;
 }
 
-.col-8{
-    padding: 40px 0 0 70px;
+.col-7{
+    padding: 0 40px;
 }
 
 .col-10,
@@ -96,17 +97,19 @@
 }
 
 #IMG_Ljubav_Pose{
-    width: 1127px;
-    height: 751px;
+    height: auto;
+    width: 50%;
     float: right;
+    margin-top: -30px;
+    margin-right: -40px;
+    padding-left: 40px;
 } 
 
 #IMG_Ljubav_Logo{
-    width: 952px;
+    width: 100%;
     height: auto;
     mix-blend-mode: exclusion;
-    padding-left: 40px;
-    margin-top: 70px;
+    padding: 30px 0;
 }
 
 #Ljubav{
@@ -144,6 +147,14 @@ footer{
     font-weight: 750;
 }
 
+article{
+    background-color: #181A1B;
+    font-size: 45px;    
+    font-weight: bold;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .Nav{
     font-size: 60px;
 }
@@ -166,6 +177,8 @@ footer{
     #Music{
         padding-left: 30px;
     }
+    .col-6 {width: 100%;}
+    .col-7 {width: 100%;}
 }
 
 @media only screen and (max-width: 1045px) {
@@ -193,6 +206,35 @@ footer{
     .col-2 {width: 100%;}
     .col-3 {width: 50%;}
     .col-4 {width: 100%;}
+    article{
+        font-size: 35px;
+    }
+    #IMG_Ljubav_Pose{
+        width: 420px;
+        height: auto;
+    }
+    #pLjubav_txt{
+        padding-top: 50px;
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    article{
+        font-size: 30px;
+    }
+    .col-5{
+        padding: 0 30px 0 30px;
+    }   
+    .col-7{
+        padding: 0 30px;
+    }    
+    #IMG_Ljubav_Pose{
+        float: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: auto;
+    } 
 }
 
 @media only screen and (max-width: 768px) {
@@ -205,7 +247,22 @@ footer{
     .col-10,
     .col-12{width: 50%;
         padding-bottom: 25px;
-            background-color: #828B8D;}
+        background-color: #828B8D;}
+    article{
+        font-size: 25px;
+    }    
+    .col-5{
+        padding: 0 20px 0 20px;
+    }  
+    .col-7{
+        padding: 0 20px;
+    }    
+    #pLjubav_txt{
+        padding-top: 30px;
+    }
+    #IMG_Ljubav_Logo{
+        padding: 20px 20px 0 20px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -259,12 +316,8 @@ footer{
     #DeFlag{
         padding: 2px;
     }   
+    article{
+        font-size: 20px;
+    }
 }
 
-article{
-    background-color: #181A1B;
-    font-size: 45px;
-    font-weight: bold;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
