--- a/en/Current/stylesheet.css
+++ b/en/Current/stylesheet.css
@@ -12,22 +12,21 @@
 .col-4 {width: 100%;}
 .col-5 {width: 50%;}
 .col-6 {width: 50%;}
-.col-7 {width: 50%;}
-.col-8 {width: 50%;}
-.col-9 {width: 50%;}
-.col-10 {width: 50%;}
+.col-7 {width: 70%;}
+.col-8 {width: 30%;}
+.col-9 {width: 51%;}
+.col-10 {width: 49%;}
 .col-11 {width: 50%;}
 .col-12 {width: 50%;}
 .col-13 {width: 50%;}
-.col-14 {width: 50%;}
-.col-15 {width: 50%;}
+.col-14 {width: 100%;}
 .col-16 {width: 33.33%;}
 .col-17 {width: 33.33%;}
 .col-18 {width: 33.33%;}
 
 [class*="col-"]{
     float: left;
-    border: solid red 1px;
+    /* border: solid red 1px; */
 }
 
 .row-1::after{
@@ -68,23 +67,22 @@
 }
 
 .col-5{
-    margin: 250px 0;
     padding-left: 40px;
+    padding-top: 100px;
 }
 
 .col-7{
-    margin: 360px 0;
     padding-left: 40px;
+    padding-top: 300px;
 }
 
 .col-10{
-    margin-bottom: 100px;
-    padding-left: 35px;
+    padding: 0 40px;
 }
 
-.col-12{
-    margin-top: -400px;
-    padding-left: 40px;
+.col-11{
+    padding: 0 40px;
+    padding-top: 300px
 }
 
 .col-16,
@@ -121,27 +119,30 @@
 }
 
 #IMG_Current_Rin{
-    width: 1335px;
+    width: 140%;
     height: auto;
     float: right;
     mix-blend-mode: lighten;
 }
 
 #IMG_Current_KSDeluxe{
+    height: auto;
+    width: 120%;
     float: right;
-    height: 800px;
-    width: auto;
-    padding-right: 400px;
+    mix-blend-mode: lighten;
 }
 
 #IMG_Current_LivePoster{
     float: left;
-    width: 960px;
+    width: 100%;
     height: auto;
 }
 
 #IMG_Current_Ljubav{
     float: right;
+    width: 100%;
+    height: auto;
+    padding-bottom: 11px;
 }
 
 #Current{
@@ -166,6 +167,7 @@
     padding: 4px;
     border: #707070 1px solid;
 }
+
 nav,
 footer{
     background-color: #828B8D;
@@ -213,6 +215,18 @@ article{
     #Music{
         padding-left: 30px;
     }
+    .col-5{
+        padding-top: 60px;
+    }    
+    #pQuote{
+        padding-top: 60px;
+    }
+    .col-7{
+        padding-top: 200px
+    }
+    .col-11{
+        padding-top: 170px;
+    }
 }
 
 @media only screen and (max-width: 1045px) {
@@ -226,6 +240,13 @@ article{
     .col-4{
         padding-top: 20px;
     }
+    .col-5{
+        padding-left: 30px;
+        padding-top: 30px;
+    }    
+    .col-7{
+        padding-top: 130px;
+    }
     #Ljubav {
         padding-right:70px;
     }
@@ -236,10 +257,46 @@ article{
     #pLjubav{
     padding-top: 20px;
     }
+    #pLive{
+        padding-top: 40px;
+    }
     .col-1 {width: 50%;}
     .col-2 {width: 100%;}
     .col-3 {width: 50%;}
     .col-4 {width: 100%;}
+    article{
+        font-size: 35px;
+    }
+    .col-11{
+        padding-top: 120px;
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    article{
+        font-size: 30px;
+    }
+    .col-5{
+        padding-left: 20px;
+        padding-top: 0px;
+    }   
+    .col-7{
+        padding-top: 100px;
+        padding-left: 30px;
+    }
+    .col-10{
+        padding: 0 30px;
+    }    
+    #pQuote{
+        padding-top: 30px;
+    }
+    #pLive{
+        padding-top: 20px;
+    }
+    .col-11{
+        padding: 0 30px;
+        padding-top: 100px;
+    }
 }
 
 @media only screen and (max-width: 768px) {
@@ -252,7 +309,21 @@ article{
     .col-16,
     .col-18{width: 50%;
         padding-bottom: 25px;
-            background-color: #828B8D;}
+        background-color: #828B8D;}
+    article{
+        font-size: 25px;
+    } 
+    .col-7{
+        padding-top: 80px;
+        padding-left: 20px;
+    }   
+    .col-10{
+        padding: 0 20px;
+    } 
+    .col-11{
+        padding: 0 20px;
+        padding-top: 80px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -267,6 +338,9 @@ article{
     }
     .col-4{
         padding-top: 10px;
+    }
+    .col-7{
+        padding-top: 40px;
     }
     .col-16,
     .col-18{
@@ -306,5 +380,16 @@ article{
     #DeFlag{
         padding: 2px;
     }   
+    article{
+        font-size: 20px;
+    }
+    .col-9 {width: 100%;}
+    .col-10 {width: 100%;}
+    .col-11 {width: 100%;}
+    .col-12 {width: 100%;}
+    .col-11{
+        padding-top: 40px;
+        padding-bottom: 5px
+    }
 }
 
