--- a/de/Current/stylesheet.css
+++ b/de/Current/stylesheet.css
@@ -10,12 +10,42 @@
 .col-2 {width: 40%;}
 .col-3 {width: 30%;}
 .col-4 {width: 100%;}
+.col-5 {width: 50%;}
+.col-6 {width: 50%;}
+.col-7 {width: 70%;}
+.col-8 {width: 30%;}
+.col-9 {width: 51%;}
+.col-10 {width: 49%;}
+.col-11 {width: 50%;}
+.col-12 {width: 50%;}
+.col-13 {width: 50%;}
+.col-14 {width: 100%;}
+.col-16 {width: 33.33%;}
+.col-17 {width: 33.33%;}
+.col-18 {width: 33.33%;}
 
 [class*="col-"]{
     float: left;
+    /* border: solid red 1px; */
 }
 
-.row::after{
+.row-1::after{
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.row-2::after{
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.row-3{
+    padding: 5px 0 5px 0;
+}
+
+.row-3::after{
     content: "";
     clear: both;
     display: table;
@@ -34,6 +64,30 @@
 .col-4{
     text-align: center;
     padding-bottom: 40px;
+}
+
+.col-5{
+    padding-left: 40px;
+    padding-top: 100px;
+}
+
+.col-7{
+    padding-left: 40px;
+    padding-top: 300px;
+}
+
+.col-10{
+    padding: 0 40px;
+}
+
+.col-11{
+    padding: 0 40px;
+    padding-top: 300px
+}
+
+.col-16,
+.col-17{
+    text-align: center;
 }
 
 #pMusic,
@@ -56,20 +110,102 @@
     height: auto;
 }
 
+#pQuote{
+    padding-top: 100px;
+}
+
+#pLive{
+    padding-top: 100px;
+}
+
+#IMG_Current_Rin{
+    width: 140%;
+    height: auto;
+    float: right;
+    mix-blend-mode: lighten;
+}
+
+#IMG_Current_KSDeluxe{
+    height: auto;
+    width: 120%;
+    float: right;
+    mix-blend-mode: lighten;
+}
+
+#IMG_Current_LivePoster{
+    float: left;
+    width: 100%;
+    height: auto;
+}
+
+#IMG_Current_Ljubav{
+    float: right;
+    width: 100%;
+    height: auto;
+    padding-bottom: 11px;
+}
+
 #Current{
     font-weight: 1000;
 }
 
-nav{
+#EnFlag,
+#DeFlag{
+    max-width: 45px;
+    height: auto;
+    float: right;
+    margin-top: 5px;
+}
+
+#EnFlag{
+    padding: 5px;
+    background-color: #707070;
+    margin-right: 40%;
+}
+
+#DeFlag{
+    padding: 4px;
+    border: #707070 1px solid;
+}
+
+nav,
+footer{
     background-color: #828B8D;
 }
 
-.Nav{
-    font-size: 60px;
+footer{
+    margin-top: -11px;
+}
+
+.Nav,
+.Footer{
     color: #000000;
     text-decoration: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 750;
+}
+
+article{
+    background-color: #181A1B;
+    font-size: 45px;
+    font-weight: bold;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.Nav{
+    font-size: 60px;
+}
+
+.Footer{
+    font-size: 30px;
+}
+
+.a_Current:active,
+.a_Current:link,
+.a_Current:visited,
+.a_Current:hover{
+    color: white;
 }
 
 @media only screen and (max-width: 1500px) {
@@ -78,6 +214,18 @@ nav{
     }
     #Music{
         padding-left: 30px;
+    }
+    .col-5{
+        padding-top: 60px;
+    }    
+    #pQuote{
+        padding-top: 60px;
+    }
+    .col-7{
+        padding-top: 200px
+    }
+    .col-11{
+        padding-top: 170px;
     }
 }
 
@@ -92,6 +240,13 @@ nav{
     .col-4{
         padding-top: 20px;
     }
+    .col-5{
+        padding-left: 30px;
+        padding-top: 30px;
+    }    
+    .col-7{
+        padding-top: 130px;
+    }
     #Ljubav {
         padding-right:70px;
     }
@@ -102,8 +257,139 @@ nav{
     #pLjubav{
     padding-top: 20px;
     }
+    #pLive{
+        padding-top: 40px;
+    }
     .col-1 {width: 50%;}
     .col-2 {width: 100%;}
     .col-3 {width: 50%;}
     .col-4 {width: 100%;}
+    article{
+        font-size: 35px;
+    }
+    .col-11{
+        padding-top: 120px;
+    }
 }
+
+@media only screen and (max-width: 850px) {
+    article{
+        font-size: 30px;
+    }
+    .col-5{
+        padding-left: 20px;
+        padding-top: 0px;
+    }   
+    .col-7{
+        padding-top: 100px;
+        padding-left: 30px;
+    }
+    .col-10{
+        padding: 0 30px;
+    }    
+    #pQuote{
+        padding-top: 30px;
+    }
+    #pLive{
+        padding-top: 20px;
+    }
+    .col-11{
+        padding: 0 30px;
+        padding-top: 100px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .col-17{position: absolute;
+            left: 50%;
+            transform: translate(-50%);
+            width: 60%;
+            margin-top: 30px;
+    }
+    .col-16,
+    .col-18{width: 50%;
+        padding-bottom: 25px;
+        background-color: #828B8D;}
+    article{
+        font-size: 25px;
+    } 
+    .col-7{
+        padding-top: 80px;
+        padding-left: 20px;
+    }   
+    .col-10{
+        padding: 0 20px;
+    } 
+    .col-11{
+        padding: 0 20px;
+        padding-top: 80px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .col-2{
+        position: absolute;
+        padding-top: 10px;
+    }
+    .col-1,
+    .col-3{
+        padding-top: 0;
+        margin-top: 140px;
+    }
+    .col-4{
+        padding-top: 10px;
+    }
+    .col-7{
+        padding-top: 40px;
+    }
+    .col-16,
+    .col-18{
+        padding-bottom: 40px;
+    }
+    .col-17{
+        margin-top: 40px;
+    }
+    .Nav{
+        font-size: 30px;
+    }
+    .Footer{
+        font-size: 20px;
+    }
+    #Logo{
+        width: 200px;
+        height: auto;
+    }
+    #AboutRin{
+        float: left;
+        padding-bottom: 17px;
+    }
+    #Live{
+        float: right;
+        padding-bottom: 17px;
+    }
+    #EnFlag,
+    #DeFlag{
+        max-width: 31.5px;
+        height: auto;
+        float: right;
+        margin-top: 5px;
+    }
+    #EnFlag{
+        padding: 3px;
+    }
+    #DeFlag{
+        padding: 2px;
+    }   
+    article{
+        font-size: 20px;
+    }
+    .col-9 {width: 100%;}
+    .col-10 {width: 100%;}
+    .col-11 {width: 100%;}
+    .col-12 {width: 100%;}
+    .col-11{
+        padding-top: 40px;
+        padding-bottom: 5px
+    }
+}
+
