--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,6 +85,10 @@
     padding-top: 300px
 }
 
+.col-14{
+    padding: 5px 40px;
+}
+
 .col-16,
 .col-17{
     text-align: center;
@@ -297,6 +301,9 @@ article{
         padding: 0 30px;
         padding-top: 100px;
     }
+    .col-14{
+        padding: 10px 30px;
+    }    
 }
 
 @media only screen and (max-width: 768px) {
@@ -324,6 +331,9 @@ article{
         padding: 0 20px;
         padding-top: 80px;
     }
+    .col-14{
+        padding: 10px 20px;
+    }    
 }
 
 @media only screen and (max-width: 600px) {
